; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/extr_gd.c__php_image_stream_putbuf.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/extr_gd.c__php_image_stream_putbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdIOCtx = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gdIOCtx*, i8*, i32)* @_php_image_stream_putbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_php_image_stream_putbuf(%struct.gdIOCtx* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.gdIOCtx*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.gdIOCtx* %0, %struct.gdIOCtx** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.gdIOCtx*, %struct.gdIOCtx** %4, align 8
  %9 = getelementptr inbounds %struct.gdIOCtx, %struct.gdIOCtx* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to i32*
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @php_stream_write(i32* %12, i8* %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @php_stream_write(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
